# oracle_django

./: README.md  pyproject.toml
ordjango/: db.sqlite3  manage.py  v.json
ordjango/main/: admin.py  models.py  urls.py  views.py
ordjango/main/migrations/: 0001_initial.py
ordjango/main/templates/main/: base.html  home.html  model_form_upload.html  search.html  upload.html
ordjango/ordjango/: asgi.py  settings.py  urls.py  wsgi.py
ordjango/static/assets/css/castom/: main.css
task/: fileupdate.csv  insert.csv  insert_inb_oracle.py  sql.txt  task.docx  update_inb_oracle.py
