[tool.poetry]
name = "oracle_django"
version = "0.2.0"
description = ""
authors = ["Stanislav Somov"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
cx-Oracle = "^8.3.0"
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
